[gd_scene load_steps=2 format=3 uid="uid://c6wpb4dhaw07d"]

[ext_resource type="Script" uid="uid://t48pyo2h6epw" path="res://scenes/ui/debug_ui.gd" id="1_8x783"]

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource("1_8x783")

[node name="DebugPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -176.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="DebugUIGrid" type="GridContainer" parent="DebugPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="RangeLabel" type="Label" parent="DebugPanel/MarginContainer/DebugUIGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Movement Range"

[node name="PathLabel" type="Label" parent="DebugPanel/MarginContainer/DebugUIGrid"]
layout_mode = 2
text = "Player path:"

[node name="PositionLabel" type="Label" parent="DebugPanel/MarginContainer/DebugUIGrid"]
layout_mode = 2
text = "Screen Position: "

[node name="PlayerMovingToLabel" type="Label" parent="DebugPanel/MarginContainer/DebugUIGrid"]
layout_mode = 2
text = "Player Moving to:"
